dev/tests/cases/neg/18_unknown_type.tv
df main() -> void {
    set x: quux = 5;
}
